--- a/RaisingMinds/post/templates/post/community.html
+++ b/RaisingMinds/post/templates/post/community.html
@@ -67,10 +67,10 @@
                             </div>
                             <div class="row">
                               <div class="col-sm-6 mt-1">
-                                  <p>Goal : LKR {{post.donate_amount}}</p>
+                                  <p>Goal : USD {{post.donate_amount}}</p>
                               </div>
                               <div class="col-sm-6 mt-1">
-                                  <p>Current : LKR {{post.current_amount}}</p>
+                                  <p>Current : USD {{post.current_amount}}</p>
                               </div>
                           </div>
                           <div >
