--- a/RaisingMinds/app/templates/app/projects.html
+++ b/RaisingMinds/app/templates/app/projects.html
@@ -123,25 +123,32 @@
           </div>
 
           <div class="row">
+            {% for post in posts %}
+            {% if post.is_approved %}
+            {% if post.donate_amount <= post.current_amount %}
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon-box">
                 <div class="project-image">
-                  <img src="{% static "app/images/school.jpg" %}">
+                  <img src="{{post.post_image.url}}">
                 </div>
-                <h4><a href="">Narandeniya Kanishta Vidyalaya (Primary School)</a></h4>
-                <p>Collecting funds for a Computer Lab.</p>
+                <h4><a href="">{{post.author.school_name}}</a></h4>
+                <p>{{post.title}}</p>
                 <div class="progressbar">
                   <h4>Progress</h4>
                   <div class="progress">
                     <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
                   </div>
-                  <p class="donate-text text-center">Goal : LKR 100000</p>
+                  <p class="donate-text text-center">Goal : USD {{post.donate_amount}}</p>
                   <p class="donate-text text-center">Completed</p>
                 </div>
                 </div>
+                
             </div>
+            {% endif %}
+            {% endif %}
+            {% endfor %}
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+            {% comment %} <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon-box">
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
@@ -157,9 +164,9 @@
                   <p class="donate-text text-center">Completed</p>
                 </div>
               </div>
-            </div>
+            </div> {% endcomment %}
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+            {% comment %} <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon-box">
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
@@ -175,9 +182,9 @@
                   <p class="donate-text text-center">Completed</p>
                 </div>
               </div>
-            </div>
+            </div> {% endcomment %}
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+            {% comment %} <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon-box">
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
@@ -193,9 +200,9 @@
                   <p class="donate-text text-center">Completed</p>
                 </div>
               </div>
-            </div>
+            </div> {% endcomment %}
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+            {% comment %} <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon-box">
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
@@ -211,9 +218,9 @@
                   <p class="donate-text text-center">Completed</p>
                 </div>
               </div>
-            </div>
+            </div> {% endcomment %}
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+            {% comment %} <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon-box">
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
@@ -229,7 +236,7 @@
                   <p class="donate-text text-center">Completed</p>
                 </div>
               </div>
-            </div>
+            </div> {% endcomment %}
           </div>
         </div>
       </section><!-- End Completed Projects Section -->
