--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -231,8 +231,10 @@
 
             <div class="row">
 
-              {% for post in posts|slice:":3" %}
+              {% for post in posts|slice:":3"%}
+              
                 {% if post.is_approved %}
+                {% if post.donate_amount > post.current_amount %}
               <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                 <div class="icon-box">
                   <div class="project-image">
@@ -262,6 +264,8 @@
                 </div>
                 </div>
               </div>
+              
+                {% endif %}
                 {% endif %}
 
               {% endfor %}
