--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -104,6 +104,7 @@
         </section>
         <!--End of Hero Section -->
 
+        <!-- Box Section -->
         <section id="box" class="d-flex align-items-center">
         <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
           <div class="row icon-boxes">
@@ -143,7 +144,7 @@
         </div>
         </section><!-- End of Box Section -->
 
-        <!-- ======= About Section ======= -->
+        <!-- About Section -->
         <section id="about" class="about">
           <div class="container" data-aos="fade-up">
     
@@ -166,13 +167,12 @@
                   tirelessly work on diverse projects that span from enhancing 
                   infrastructure to implementing innovative teaching methodologies.                  
                 </p>
-                <a href="#" class="btn-learn-more">Learn More</a>
               </div>
             </div>
           </div>
         </section><!-- End About Section -->
     
-        <!-- ======= Counts Section ======= -->
+        <!-- Counts Section -->
         <section id="counts" class="counts section-bg">
           <div class="container">
     
@@ -181,7 +181,6 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="countbox">
                   <h1 class="count" data-target="1254">0</h1>
-                  <!-- <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="2" class="purecounter"></span> -->
                   <p>Happy Donaters</p>
                 </div>
               </div>
@@ -189,7 +188,6 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="countbox">
                   <h1 class="count" data-target="140">0</h1>
-                  <!-- <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="2" class="purecounter"></span> -->
                   <p>Projects Completed</p>
                 </div>
               </div>
@@ -197,7 +195,6 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="countbox">
                   <h1 class="count" data-target="100">0</h1>
-                  <!-- <span data-purecounter-start="0" data-purecounter-end="30" data-purecounter-duration="2" class="purecounter"></span> -->
                   <p>Schools Helped</p>
                 </div>
               </div>
@@ -205,7 +202,6 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="countbox">
                   <h1 class="count" data-target="450">0</h1>
-                  <!-- <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="2" class="purecounter"></span> -->
                   <p>Toal Funds Raised</p>
                 </div>
               </div>
@@ -329,7 +325,7 @@
         </section>
         <!-- End Ongoing Projects Section -->
 
-        <!-- ======= Team Section ======= -->
+        <!-- Team Section -->
       <section id="team" class="team section-bg">
         <div class="container" data-aos="fade-up">
 
@@ -413,7 +409,7 @@
         </div>
       </section><!-- End Team Section -->
 
-        <!-- ======= Contact Section ======= -->
+        <!-- Contact Section -->
         <section id="contact" class="contact">
           <div class="container" data-aos="fade-up">
 
@@ -535,22 +531,6 @@
               </div>
             </div>
           </div>
-
-          <div id="rights">
-            <div class="container d-md-flex py-4">
-
-              <div  class="me-md-auto text-center text-md-start">
-                <div class="copyright">
-                  &copy; Copyright <strong><span>Raising Minds</span></strong>. All Rights Reserved
-                </div>
-                <div class="credits">
-                  Designed by <a href=""> &lt;Coding Hamsters/&gt; </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </footer><!-- End Footer -->
-
       {% endblock %}
 
         <!-- Main JS File -->
