--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -339,7 +339,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
               <div class="member">
                 <div class="member-img">
-                  <img src="{% static "app/images/team-1.jpg" %}" class="img-fluid" alt="">
+                  <img src="{% static "app/images/profile-pic (1).png" %}" class="img-fluid" alt="">
                   <div class="social">
                     <a href="https://github.com/DulithaHarasara"><i class="fa fa-github"></i></a>
                     <a href="https://www.facebook.com/dulitha.harasara"><i class="fa fa-facebook"></i>
@@ -356,7 +356,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
               <div class="member">
                 <div class="member-img">
-                  <img src="{% static "app/images/team-2.png" %}" class="img-fluid" alt="">
+                  <img src="{% static "app/images/profile-pic (2).png" %}" class="img-fluid" alt="">
                   <div class="social">
                     <a href="https://github.com/Malmi-Ameesha"><i class="fa fa-github"></i></a>
                     <a href="https://www.facebook.com/malmi.ameesha.96?mibextid=PzaGJu"><i class="fa fa-facebook"></i></a>
@@ -373,7 +373,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
               <div class="member">
                 <div class="member-img">
-                  <img src="{% static "app/images/team-3.jpg" %}" class="img-fluid" alt="">
+                  <img src="{% static "app/images/profile-pic.png" %}" class="img-fluid" alt="">
                   <div class="social">
                     <a href="https://github.com/MGKShavinda"><i class="fa fa-github"></i></a>
                     <a href="https://www.facebook.com/kavindu.shavinda.10"><i class="fa fa-facebook"></i></a>
@@ -390,7 +390,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
               <div class="member">
                 <div class="member-img">
-                  <img src="{% static "app/images/team-4.png" %}" class="img-fluid" alt="">
+                  <img src="{% static "app/images/profile-pic (3).png" %}" class="img-fluid" alt="">
                   <div class="social">
                     <a href="https://github.com/HeshithaSandeepa"><i class="fa fa-github"></i></a>
                     <a href="https://www.facebook.com/heshitha.sandeepa.750/"><i class="fa fa-facebook"></i></a>
