update school registration form
school type

--- a/RaisingMinds/school_profile/templates/school_profile/school_registration.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_registration.html
@@ -136,8 +136,9 @@
               <select class="form-control" id="Select" required name="schoolType">
                 <option selected>Select Your School Type</option>
                 <option>Mixed School</option>
-                <option>Boyes School</option>
+                <option>Boys School</option>
                 <option>Girls School</option>
+                <option>Pre School </option>
               </select>
             </div>
           </div>
