--- a/RaisingMinds/users/templates/users/login.html
+++ b/RaisingMinds/users/templates/users/login.html
@@ -61,7 +61,7 @@
   <section class="ftco-section mt-4">
     <div class="container loginForm">
       <div class="row justify-content-center">
-        <div class="col-md-7 col-lg-5">
+        <div class="col-md-7 col-lg-5 mt-5">
           <div class="login-wrap p-4 p-md-5">
             <div class="icon d-flex align-items-center justify-content-center">
               <span class="fa fa-user"></span>
@@ -95,14 +95,14 @@
               <br />
               <div class="text-center">
                 <p>Don't Have an Account ? <a href="{% url 'signup' %}">Sign Up</a></p>
-                <p>or</p>
+                <!-- <p>or</p> -->
 
-                <!-- Log in with Google -->
-                <a href="#">
+                <!-- Log in with Google button -->
+                <!-- <a href="#">
                   <button type="button" class="form-control btn btn-primary rounded submit px-3">
                     <i class="fab fa-google"></i>Log in with Google
-                  </button>
-                </a>
+                  </button> 
+                </a>-->
               </div>
             </form>
           </div>
