--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -74,9 +74,10 @@
                                   {% if user.is_superuser %}
                                   <li><a class="dropdown-item" href="{% url 'admin:index' %}"><i class="fas fa-user-lock fa-fw"></i> Admin Pannel</a></li>
                                   <li><hr class="dropdown-divider"></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-fw"></i> Log Out</a></li>
+                                  
                                   {% else %}
                                   {% endif %}
+                                  <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt fa-fw"></i> Log Out</a></li>
                                 </ul>
                               </li>
                            </ul>
@@ -98,7 +99,7 @@
                 <h1>Welcome to <span>Raising Minds </span></h1>
                 <h2>Join us in building a brighter future through your generous donations.</h2>
                 {% if user.is_authenticated %}
-                  <a href="{% url 'logout' %}" class="btn-get-started">Logout</a> &nbsp;&nbsp;&nbsp;
+                  {% comment "" %}No action{% endcomment %}
                 {% else %}
                 <div class="d-flex">
                   <a href="{% url 'signup' %}" class="btn-get-started">Sign up</a> &nbsp;&nbsp;&nbsp;
